title overflow fix

--- a/grocery-list-frontend/src/app/grocery-list/grocery-list.component.scss
+++ b/grocery-list-frontend/src/app/grocery-list/grocery-list.component.scss
@@ -32,3 +32,13 @@ input {
         }
     }
 }
+
+.card {
+    border-radius: 5px;
+
+    .card-title {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
